fix: server-api release and deployment
